# src/dtos/user.dto.js
@@ -5,3 +5,11 @@ export const signinResponseDTO = (user, prefer) => {
     }
     return {"name": user[0].name, "preferCategory": preferFood};
 }
+
+export const addUserMissionResponseDTO = (user, mission) => {
+    const userMission = [];
+    for (let i = 0; i < mission[0].length; i++) {
+        userMission.push(mission[0][i].title);
+    }
+    return {"name": user[0].name, "missionList: ": userMission};
+}
